#------------------------------------------------------------
# @Copyright 2022-2023 SPACEMIT. All rights reserved.
# @Use of this source code is governed by a BSD-style license
# @that can be found in the LICENSE file.
# @
# @Author: David(qiang.fu@spacemit.com)
# @Date: 2022-12-28 11:13:50
# @LastEditTime: 2023-08-03 20:10:39
# @Description: the cmake script of al layer.
#------------------------------------------------------------

add_subdirectory(chipmedia)
add_subdirectory(openmax)
add_subdirectory(ffmpeg)
add_subdirectory(v4l2)
add_subdirectory(openh264)
add_subdirectory(verisilicon)
add_subdirectory(k1)
add_subdirectory(debug)
