<?xml version="1.0"?>
<package format="3">
  <name>mpp_isp_camera_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for MPP ISP camera zero-copy frame publishing and consuming.</description>
  <maintainer email="support@spacemit.com">SPACEMIT</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>mpp_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
