<?xml version="1.0"?>
<package format="3">
  <name>mpp_msgs</name>
  <version>0.1.0</version>
  <description>ROS2 interface messages for MPP zero-copy video frame descriptors.</description>
  <maintainer email="support@spacemit.com">SPACEMIT</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
